<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/coffee_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.justjava.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:textSize="40sp"
                android:textColorHint="@android:color/white"
                android:id="@+id/name"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textColor="@android:color/white"
                android:background="@android:color/darker_gray"
                android:textAlignment="center"
                android:allowUndo="false"
                android:fontFamily="casual" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cremeButton"
                    android:layout_width="191dp"
                    android:layout_height="140dp"
                    android:background="@mipmap/whipped_cream"
                    android:width="0dp"/>

                <Button
                    android:layout_width="191dp"
                    android:layout_height="140dp"
                    android:background="@mipmap/chocolate"
                    android:layout_toRightOf="@id/cremeButton"
                    android:width="0dp"/>


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toppings"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whipped_cream"
                android:id="@+id/whippedCream"
                android:textColor="@android:color/white"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:id="@+id/chocolate"
                android:textColor="@android:color/white"/>

            <TextView
                android:text="@string/quantity"
                android:layout_height="48dp"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/black">

                <Button
                    android:id="@+id/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:onClick="decrement"
                    android:textSize="40sp"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/white"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="1"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    android:padding="20dp"
                    android:layout_toRightOf="@id/minus"/>

                <Button
                    android:id="@+id/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:onClick="increment"
                    android:textSize="40sp"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/white"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/summaryOrder"
                android:elevation="5dp"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Order"
                android:onClick="submitOrder"
                android:id="@+id/button"
                android:layout_gravity="bottom"
                android:layout_weight="3.94" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>